Get members by group

--- a/member-endpoint-service/resource_configs/iam_policies.yml
+++ b/member-endpoint-service/resource_configs/iam_policies.yml
@@ -23,6 +23,7 @@ Resources:
         - Ref: UpdateBulkMembersRole
         - Ref: CreateGroupRole
         - Ref: FetchGroupRole
+        - Ref: FetchGroupMembersRole
         - Ref: textMessageRole
         - Ref: emailMessageRole
 
@@ -58,5 +59,6 @@ Resources:
         - Ref: UpdateBulkMembersRole
         - Ref: CreateGroupRole
         - Ref: FetchGroupRole
+        - Ref: FetchGroupMembersRole
         - Ref: textMessageRole
         - Ref: emailMessageRole
