--- a/member-endpoint-service/resource_configs/iam_roles.yml
+++ b/member-endpoint-service/resource_configs/iam_roles.yml
@@ -104,6 +104,19 @@ Resources:
                 - lambda.amazonaws.com
             Action: sts:AssumeRole
 
+  FetchGroupMembersRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: FetchGroupMembersRole
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action: sts:AssumeRole
+
   textMessageRole:
     Type: AWS::IAM::Role
     Properties:
