Create ReponseHandler, Implement template text messages

--- a/member-endpoint-service/resource_configs/lambda_endpoints.yml
+++ b/member-endpoint-service/resource_configs/lambda_endpoints.yml
@@ -52,6 +52,9 @@ textMessage:
           parameters:
             paths:
               memberId: true
+            querystrings:
+              env: false
+              messageType: false
         cors: true
         authorizer:
           type: TOKEN
